remove models and add new entity and it's layers